adicao nome e github no credits-page.html

--- a/credits-page.html
+++ b/credits-page.html
@@ -7,6 +7,7 @@
     <title>Weather App - Credits</title>
   </head>
   <body>
+    <h2>Web App created by Gustavo Lucas Santana, github: <a href="https://github.com/GustLSant" target="_black" rel="nofollow">GustLSant</a></h2>
     day-clear-sky: Image by <a href="https://pixabay.com/users/jplenio-7645255/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3588618">Joe</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3588618">Pixabay</a>
     <br>
     day-partly-cloudy: <a href="https://unsplash.com/pt-br/@dannyeve?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Daoudi Aissa</a> na <a href="https://unsplash.com/pt-br/fotografias/nuvens-cumulus-Pe1Ol9oLc4o?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
