--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" id="html">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="/cloudy-day-circle.png" type="image">
